--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -6,14 +6,14 @@
   flex-wrap: wrap;
   padding: 20px;
   width: 100%;
-  background: $lite-background;
+  background: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: 0 0 $border-radius $border-radius;
 }
 .card {
   display: flex;
   flex-direction: column;
-  background: rgba(71, 147, 255, 0.2);
+  background: var(#{--card-background-default});
   border-radius: 10px;
   padding: 10px;
   width: 149px;
@@ -22,6 +22,7 @@
   .day {
     margin-bottom: 7px;
     font-size: 18px;
+    color: var(#{--text-color-default});
   }
   .day__info {
     font-size: 14px;
@@ -33,6 +34,7 @@
   }
   .temp__day {
     font-size: 18px;
+    color: var(#{--text-color-default});
   }
   .temp__night {
     font-size: 13px;
@@ -44,7 +46,7 @@
     color: $base-color;
   }
   &:hover {
-    box-shadow: 0px 3px 20px rgba(147, 144, 144, 0.28);
+    box-shadow: var(#{--card-shadow-default});
   }
 }
 .tabs {
@@ -58,9 +60,9 @@
   box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
   border-radius: 5px;
   padding: 9px 20px;
-  background: $lite-background;
+  background: var(#{--components-background-default});
   margin-right: 15px;
-  color: $lite-color;
+  color: var(#{--text-color-default});
   font-size: 18px;
   display: flex;
   align-items: center;
