--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles//variables.scss";
+
 .header {
   display: flex;
   align-items: center;
@@ -14,12 +16,15 @@
     width: 65px;
     height: 65px;
   }
+  cursor: pointer;
 }
 .title {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 25px;
+  color: $primary-color;
 }
 .change_theme {
   margin-right: 20px;
+  cursor: pointer;
 }
