--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -29,6 +29,7 @@
     justify-content: center;
     border-color: #fff;
     box-shadow: 1px 4px 10px -1px rgba(71, 147, 255, 0.2);
+    background-color: #fff;
     border-radius: 50%;
   }
   .indicator__name {
